semgrep/tests/e2e/snapshots/test_rule_parser/test_rule_parser__failure__error_messages/badpattern/error.txt
running 1 rules...
error: invalid pattern
  --> rules/syntax/badpattern.yaml:4
4 |       - pattern: $X == $X 3
  |                  ^^^^^^^^^^

Pattern could not be parsed as a Python semgrep pattern

